<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <!--<EditText
        android:id="@+id/login_edit_email"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="text|textEmailAddress"
        android:singleLine="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.305" />-->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_edit_email"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="text|textEmailAddress"
        android:singleLine="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.305">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF"
            android:ems="15"
            android:inputType="textEmailAddress"
            android:textSize="15sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <!--<EditText
        android:id="@+id/login_edit_password"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="text|textPassword"
        android:singleLine="true"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/purple_200"
        app:layout_constraintEnd_toEndOf="@+id/login_edit_email"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/login_edit_email"
        app:layout_constraintTop_toBottomOf="@+id/login_edit_email" />-->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_edit_password"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="text|textPassword"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="@+id/login_edit_email"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/login_edit_email"
        app:layout_constraintTop_toBottomOf="@+id/login_edit_email"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/purple_200">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF"
            android:ems="15"
            android:inputType="textPassword"
            android:textSize="15sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/main_text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_login"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.141" />

    <Button
        android:id="@+id/login_btn_register"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:text="@string/inscription"
        app:layout_constraintEnd_toEndOf="@+id/login_btn_validate"
        app:layout_constraintStart_toStartOf="@+id/login_btn_validate"
        app:layout_constraintTop_toBottomOf="@+id/login_btn_validate" />

    <Button
        android:id="@+id/login_btn_validate"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:text="@string/valider"
        app:layout_constraintEnd_toEndOf="@+id/login_text_password_forgot"
        app:layout_constraintStart_toStartOf="@+id/login_text_password_forgot"
        app:layout_constraintTop_toBottomOf="@+id/login_text_password_forgot" />

    <Button
        android:id="@+id/login_btn_offline_access"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/offline_access"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/login_text_password_forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/password_forgot"
        android:textColor="#18758C"
        app:layout_constraintEnd_toEndOf="@+id/login_edit_password"
        app:layout_constraintStart_toStartOf="@+id/login_edit_password"
        app:layout_constraintTop_toBottomOf="@+id/login_edit_password" />

</androidx.constraintlayout.widget.ConstraintLayout>